alt sayfalara ikonlar eklendi
alt sayfa ikonları ve mevcut olmayan hata sayfaları eklendi

--- a/aktivasyon-hata.html
+++ b/aktivasyon-hata.html
@@ -131,11 +131,11 @@
         <div class="full-container">
 
             <!-- #page-image -->
-            <div class="page-image" style="background-image:url(assets/img/404.jpg)">
+            <div class="page-image">
                 <div class="container">
                     <div class="table-cell">
                         <div class="page-title">
-                            <h1>Hata</h1>
+                            <h1>Aktivasyon Hatası</h1>
                         </div>
                     </div>
                 </div>
@@ -143,8 +143,8 @@
             <!-- END #page-image -->
 
             <div class="dortyuzdort">
-                <img src="assets/img/404.svg" alt="">
-                <p>Kullanıcı aktifleştirilemedi</p>
+              <img src="assets/img/activation-error.svg" alt="">
+                <p>Üzgünüz, kullanıcı aktivasyonu tamamlanamadı.<br> Lütfen aktivasyon kodunu kontrol ederek tekrardan deneyiniz. <br>Sorun devam ederse bşizimle iletişime geçiniz.</p>
                 <a href="index.html" class="btn btn-blue">Anasayfa'ya Dön</a>
             </div>
 
