--- a/bitti.html
+++ b/bitti.html
@@ -143,8 +143,8 @@
             <!-- END #page-image -->
 
             <div class="dortyuzdort">
-                <img src="assets/img/404.svg" alt="">
-                <p>Üzgünüz. Doğrulama Hakkınız bitti</p>
+              <img src="assets/img/finish.svg" alt="">
+                <p>Üzgünüz, saatlik doğrulama hakkınız sona erdi. Süresi sonunda tekrardan deneyiniz.</p>
                 <a href="index.html" class="btn btn-blue">Anasayfa'ya Dön</a>
             </div>
 
