--- a/giris.html
+++ b/giris.html
@@ -152,6 +152,8 @@
                 <section class="login-box box">
                     <div class="box-content">
 
+                      <div class="top-form"><img src="assets/img/sing-up.svg" alt=""></div>
+                      
                         <div class="login-select">
                             <ul class="nav nav-tabs">
                                 <li class="active col-xs-6"><a href="#girisyap" data-toggle="tab" aria-expanded="false">Giriş Yap</a></li>
