--- a/iletisim-bilgi.html
+++ b/iletisim-bilgi.html
@@ -135,51 +135,18 @@
                 <div class="container">
                     <div class="table-cell">
                         <div class="page-title">
-                            <h1>Şifremi Unuttum</h1>
-                            <ol class="breadcrumb">
-                                <li><a href="index.html">Anasayfa</a></li>
-                                <li><a href="#">Şifremi Unuttum</a></li>
-
-                            </ol>
+                            <h1>Mesajınız Alındı</h1>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- END #page-image -->
 
-            <!-- login-container -->
-            <div class="login-container">
-                <section class="login-box box">
-                    <div class="box-content">
-                      <div class="top-form"><img src="assets/img/pass-reminder.svg" alt=""></div>
-
-                        <div id="myTabContent" class="tab-content login-tab-content">
-                            <!-- sifrem-unuttum -->
-                            <div class="tab-pane animated fadeIn active in" id="sifrem-unuttum">
-                                <div id="register-form-container">
-                                    <form id="form" action="https://portal.gomail.com.tr/iletisimgomail/islem.aspx?p=sifremiunuttum" method="post" novalidate="novalidate">
-                                        <div class="row">
-
-                                            <div class="col col-md-12 col-sm-12 col-xs-12">
-                                                <input type="text" class="form-control" id="txtEposta" name="txtEposta" placeholder="E-Posta Adresi" data-val-required="<img src='images/InputReqImg.png' style='margin-top: 8px;' />" data-val-regex="<img src='images/InputReqImg.png' style='margin-top: 8px;' />"
-                                                    data-val-regex-pattern="^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,4}$" data-val="true">
-                                            </div>
-
-                                            <div class="col col-md-12 col-sm-12 col-xs-12">
-                                                <button class="btn btn-blue send-button" value="1" type="submit">Şifremi Gönder</button>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                            <!-- end #sifrem-unuttum -->
-
-                        </div>
-
-                    </div>
-                </section>
+            <div class="dortyuzdort">
+                <img src="assets/img/message-send.svg" alt="">
+                <p>Mesajınız alınmıştır. Müşteri temsilciniz sizinle en kısa sürede iletişim kuracaktır.</p>
+                <a href="index.html" class="btn btn-blue">Anasayfa'ya Dön</a>
             </div>
-            <!-- end #login-container -->
 
         </div>
         <!-- end #full-container -->
