--- a/kayit.html
+++ b/kayit.html
@@ -151,6 +151,7 @@
             <div class="login-container">
                 <section class="login-box box">
                     <div class="box-content">
+                      <div class="top-form"><img src="assets/img/sing-up.svg" alt=""></div>
 
                         <div class="login-select">
                             <ul class="nav nav-tabs">
