--- a/unuttum-bilgi.html
+++ b/unuttum-bilgi.html
@@ -113,7 +113,7 @@
                     <div class="right">
 
                         <div class="top-buttons">
-                            <a href="giris.html" class="btn btn-login"><i class="fa fa-user"></i> Giriş Yap</a>
+                            <a href="giris.html" class="btn btn-login1"><i class="fa fa-user"></i> Giriş Yap</a>
                             <a href="kayit.html" class="btn btn-white">Kayıt Ol</a>
                         </div>
 
@@ -131,129 +131,22 @@
         <div class="full-container">
 
             <!-- #page-image -->
-            <div class="page-image" style="background-image:url(assets/img/kurumsal.jpg)">
+            <div class="page-image">
                 <div class="container">
                     <div class="table-cell">
                         <div class="page-title">
-                            <h1>E-Mail Doğrulama</h1>
+                            <h1>Parola Hatırlatma</h1>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- END #page-image -->
 
-            <!-- dogrulama -->
-            <div class="container">
-                <div class="dogrulama">
-
-                    <!-- page-nav-menu -->
-                    <nav class="page-nav-menu">
-                        <ul>
-                            <li><a href="#syntax">Satış Sözleşmesi</a></li>
-                            <li><a href="#mx">Gizlilik Sözleşmesi</a></li>
-                            <li><a href="#gecici">Hizmet Sözleşmesi</a></li>
-                            <li><a href="#kullanici">Kullanım Koşulları</a></li>
-                        </ul>
-                    </nav>
-                    <!-- end #page-nav-menu -->
-
-                    </div>
-                    <!-- dogrulama-form -->
-                    </div>
-                    <!-- end #dogrulama-form -->
-                </div>
+            <div class="dortyuzdort">
+                <img src="assets/img/forgot-pass.svg" alt="">
+                <p>Parolanız kayıtlı e-mail adresinize gönderilmiştir.</p>
+                <a href="index.html" class="btn btn-blue">Anasayfa'ya Dön</a>
             </div>
-            <!-- end #dogrulama -->
-
-            <!-- dogrulama-neden -->
-            <div id="dogrulama-neden" class="g-item">
-                <div id="syntax" class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h2>Syntax</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, nobis, consequuntur! Optio enim, et soluta iure reprehenderit iste, laboriosam quam animi illo hic, eveniet repellendus. Error itaque voluptas, nostrum
-                                quas ut tenetur nemo consectetur! Magnam odio perferendis delectus eius laboriosam fuga sed. Ullam similique dolorem laborum veniam quos dolore obcaecati doloribus ipsum. Suscipit id quo, cupiditate commodi, eum
-                                facere! Neque!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem nemo at laborum? Voluptatibus, iusto cumque voluptate magnam fuga molestiae, assumenda quidem harum quasi, ipsa quae vitae voluptas. Odio ratione ad
-                                aspernatur! Atque, autem blanditiis qui molestiae ex ab sapiente.</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, nobis, consequuntur! Optio enim, et soluta iure reprehenderit iste, laboriosam quam animi illo hic, eveniet repellendus. Error itaque voluptas, nostrum
-                                    quas ut tenetur nemo consectetur! Magnam odio perferendis delectus eius laboriosam fuga sed. Ullam similique dolorem laborum veniam quos dolore obcaecati doloribus ipsum. Suscipit id quo, cupiditate commodi, eum
-                                    facere! Neque!</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem nemo at laborum? Voluptatibus, iusto cumque voluptate magnam fuga molestiae, assumenda quidem harum quasi, ipsa quae vitae voluptas. Odio ratione ad
-                                    aspernatur! Atque, autem blanditiis qui molestiae ex ab sapiente.</p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, nobis, consequuntur! Optio enim, et soluta iure reprehenderit iste, laboriosam quam animi illo hic, eveniet repellendus. Error itaque voluptas, nostrum
-                                        quas ut tenetur nemo consectetur! Magnam odio perferendis delectus eius laboriosam fuga sed. Ullam similique dolorem laborum veniam quos dolore obcaecati doloribus ipsum. Suscipit id quo, cupiditate commodi, eum
-                                        facere! Neque!</p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem nemo at laborum? Voluptatibus, iusto cumque voluptate magnam fuga molestiae, assumenda quidem harum quasi, ipsa quae vitae voluptas. Odio ratione ad
-                                        aspernatur! Atque, autem blanditiis qui molestiae ex ab sapiente.</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, nobis, consequuntur! Optio enim, et soluta iure reprehenderit iste, laboriosam quam animi illo hic, eveniet repellendus. Error itaque voluptas, nostrum
-                                            quas ut tenetur nemo consectetur! Magnam odio perferendis delectus eius laboriosam fuga sed. Ullam similique dolorem laborum veniam quos dolore obcaecati doloribus ipsum. Suscipit id quo, cupiditate commodi, eum
-                                            facere! Neque!</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem nemo at laborum? Voluptatibus, iusto cumque voluptate magnam fuga molestiae, assumenda quidem harum quasi, ipsa quae vitae voluptas. Odio ratione ad
-                                            aspernatur! Atque, autem blanditiis qui molestiae ex ab sapiente.</p>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, nobis, consequuntur! Optio enim, et soluta iure reprehenderit iste, laboriosam quam animi illo hic, eveniet repellendus. Error itaque voluptas, nostrum
-                                                quas ut tenetur nemo consectetur! Magnam odio perferendis delectus eius laboriosam fuga sed. Ullam similique dolorem laborum veniam quos dolore obcaecati doloribus ipsum. Suscipit id quo, cupiditate commodi, eum
-                                                facere! Neque!</p>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem nemo at laborum? Voluptatibus, iusto cumque voluptate magnam fuga molestiae, assumenda quidem harum quasi, ipsa quae vitae voluptas. Odio ratione ad
-                                                aspernatur! Atque, autem blanditiis qui molestiae ex ab sapiente.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- end #ogrulama-neden -->
-
-            <!-- dogrulama-neden -->
-            <div id="dogrulama-neden" class="g-item">
-                <div id="mx" class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h2>MX Kaydı</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, nobis, consequuntur! Optio enim, et soluta iure reprehenderit iste, laboriosam quam animi illo hic, eveniet repellendus. Error itaque voluptas, nostrum
-                                quas ut tenetur nemo consectetur! Magnam odio perferendis delectus eius laboriosam fuga sed. Ullam similique dolorem laborum veniam quos dolore obcaecati doloribus ipsum. Suscipit id quo, cupiditate commodi, eum
-                                facere! Neque!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem nemo at laborum? Voluptatibus, iusto cumque voluptate magnam fuga molestiae, assumenda quidem harum quasi, ipsa quae vitae voluptas. Odio ratione ad
-                                aspernatur! Atque, autem blanditiis qui molestiae ex ab sapiente.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- end #ogrulama-neden -->
-
-            <!-- dogrulama-neden -->
-            <div id="dogrulama-neden" class="g-item">
-                <div id="gecici" class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h2>Geçici Posta</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, nobis, consequuntur! Optio enim, et soluta iure reprehenderit iste, laboriosam quam animi illo hic, eveniet repellendus. Error itaque voluptas, nostrum
-                                quas ut tenetur nemo consectetur! Magnam odio perferendis delectus eius laboriosam fuga sed. Ullam similique dolorem laborum veniam quos dolore obcaecati doloribus ipsum. Suscipit id quo, cupiditate commodi, eum
-                                facere! Neque!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem nemo at laborum? Voluptatibus, iusto cumque voluptate magnam fuga molestiae, assumenda quidem harum quasi, ipsa quae vitae voluptas. Odio ratione ad
-                                aspernatur! Atque, autem blanditiis qui molestiae ex ab sapiente.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- end #ogrulama-neden -->
-
-            <!-- dogrulama-neden -->
-            <div id="dogrulama-neden" class="g-item">
-                <div id="kullanici" class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h2>Kullanıcı Gerçekte Var mı?</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, nobis, consequuntur! Optio enim, et soluta iure reprehenderit iste, laboriosam quam animi illo hic, eveniet repellendus. Error itaque voluptas, nostrum
-                                quas ut tenetur nemo consectetur! Magnam odio perferendis delectus eius laboriosam fuga sed. Ullam similique dolorem laborum veniam quos dolore obcaecati doloribus ipsum. Suscipit id quo, cupiditate commodi, eum
-                                facere! Neque!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem nemo at laborum? Voluptatibus, iusto cumque voluptate magnam fuga molestiae, assumenda quidem harum quasi, ipsa quae vitae voluptas. Odio ratione ad
-                                aspernatur! Atque, autem blanditiis qui molestiae ex ab sapiente.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- end #ogrulama-neden -->
-
-
 
         </div>
         <!-- end #full-container -->
