--- a/aktivasyon.html
+++ b/aktivasyon.html
@@ -151,6 +151,7 @@
             <div class="login-container">
                 <section class="login-box box">
                     <div class="box-content">
+                      <div class="top-form"><img src="assets/img/activation.svg" alt=""></div>
 
                         <div id="myTabContent" class="tab-content login-tab-content">
                             <!-- aktivasyon-->
