--- a/toplu-mail-gonderim-fiyatlari.html
+++ b/toplu-mail-gonderim-fiyatlari.html
@@ -589,7 +589,7 @@
                     <!-- item -->
                     <div class="yardimItem">
                         <h1>GoMail verilerimizi nerede ve nasıl saklamaktadır?</h1>
-                        <p>Bilgi güvenliği ve müşteri gizliliği bizlerin en temel ve veazgeçilmez standartlarımızdandır. GoMail %100 Türk sermayeli bir şirket markası olup, alt yapısının oluşturan sunucuları Türkiye'de Radore Veri Merkezi Hizmetleri A.Ş.'ye ait datacenter'da tutulmaktadır. Hiçbir veriniz mahkeme kararı olmaksızın üçüncü kişiler ile paylaşılmaz ve ne amaçla olursa olsun yurt dışında bulunan başka bir sunucuya aktarılmaz veya bu sunucularda saklanmaz.</p>
+                        <p>Bilgi güvenliği ve müşteri gizliliği bizlerin en temel ve veazgeçilmez standartlarımızdandır. GoMail %100 Türk sermayeli bir şirket markası olup, alt yapısının oluşturan sunucuları Türkiye'de yerleşik bulunan güvenilir ve saygın datacenterlarda tutulmaktadır. Hiçbir veriniz mahkeme kararı olmaksızın üçüncü kişiler ile paylaşılmaz ve ne amaçla olursa olsun yurt dışında bulunan başka bir sunucuya aktarılmaz veya bu sunucularda saklanmaz.</p>
                     </div>
 
 
