--- a/kayit.html
+++ b/kayit.html
@@ -113,7 +113,7 @@
                     <div class="right">
 
                         <div class="top-buttons">
-                            <a href="giris.html" class="btn btn-login"><i class="fa fa-user"></i> Giriş Yap</a>
+                            <a href="giris.html" class="btn btn-login1"><i class="fa fa-user"></i> Giriş Yap</a>
                             <a href="kayit.html" class="btn btn-white">Kayıt Ol</a>
                         </div>
 
