kulanılmayan js ler kaldırıldı bazı jsler cdn alındı
kulanılmayan js ler kaldırıldı bazı jsler cdnden alındı

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
 
-    <script src="assets/js/jquery-1.9.1.min.js"></script>
+ 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/jquery.session@1.0.0/jquery.session.js'></script>
     <!--[if lte IE 7]>
@@ -477,10 +477,7 @@ alınabilir.</p>
 		
 	</script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="assets/js/bootstrap-hover-dropdown.js"></script>
-    <script>
-        $('.input-after').bootstrapNumber();
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-hover-dropdown/2.0.11/bootstrap-hover-dropdown.min.js"></script>
     <script src="assets/js/owl.carousel.js"></script>
     <script src="assets/js/init.js"></script>
     <script src="assets/js/velocity.min.js"></script>
@@ -494,7 +491,6 @@ alınabilir.</p>
     <script src="assets/js/typing/main.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.11.4/paper-full.min.js"></script>
-    <script src="assets/js/text.js"></script>
     <script src="assets/js/blob.js"></script>
 
 </body>
