sayfa kırık linkleri düzeltildi
google tarafından indexlenmiş olan eski linkler tekrardan eklendi

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <ul>
                             <li>
                                 <div class="menu-title">
-                                    <a href="toplu-mail-gonderim-ozellikleri.html" data-hover="Özellikler">Özellikler</a>
+                                    <a href="toplu-mail-gonderim-servisi-ozellikleri.html" data-hover="Özellikler">Özellikler</a>
                                 </div>
                             </li>
                             <li>
@@ -97,7 +97,7 @@
                             </li>
                             <li>
                                 <div class="menu-title">
-                                    <a href="kurumsal-mail-hizmeti.html" data-hover="Kurumsal E-Mail">Kurumsal E-Mail</a>
+                                    <a href="kurumsal-mail-hosting-cozumleri.html" data-hover="Kurumsal E-Mail">Kurumsal E-Mail</a>
                                 </div>
                             </li>
                             <li>
@@ -186,7 +186,7 @@
             </div>
 
             <div class="main-title">
-                <h1><a href=toplu-mail-gonderim-ozellikleri.html>Katma Değerli Toplu E-Mail Gönderim Servisi</a></h1>
+                <h1><a href=toplu-mail-gonderim-servisi-ozellikleri.html>Katma Değerli Toplu E-Mail Gönderim Servisi</a></h1>
                 <p>GoMail, katma değerli servisleri ile kampanya, duyuru, etkinlik, hatırlatma, fatura, ekstre, poliçe, ihbar ve ihtar bildirimleri gibi <br>anlık ve periyodik bilgilendirme amaçlı Toplu E-Mail gönderimlerinizi müşterilerinize daha kolay ve hızlı ulaşatırmanızı sağlar.</p>
             </div>
 
@@ -294,7 +294,7 @@ alınabilir.</p>
                     </div>
                 </div>
                 <div class="tumu">
-                    <a href="toplu-mail-gonderim-ozellikleri.html" class="btn btn-blue">Tüm Özellikleri Gör</a>
+                    <a href="toplu-mail-gonderim-servisi-ozellikleri.html" class="btn btn-blue">Tüm Özellikleri Gör</a>
                 </div>
             </div>
 
@@ -313,19 +313,19 @@ alınabilir.</p>
                 <div class="cozum-title col-lg-6">
                     <h5>Kurumsal E-Mail Hosting ve Mail Sunucu Çözümleri</h5>
                     <p>GoMail geliştirmekte olduğu mail teknolojileri ile işletmelerin Kurumsal E-Mail ihtiyaçlarını hızlı, kesintisiz, güvenilir ve uygun maliyetlerle karşılar.</p>
-                    <a href="kurumsal-mail-hizmeti.html" class="btn btn-blue">Kurumsal E-Mail Çözümleri</a>
+                    <a href="kurumsal-mail-hosting-cozumleri.html" class="btn btn-blue">Kurumsal E-Mail Çözümleri</a>
                 </div>
                 <div class="cozum-list col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <div class="row">
                         <div class="col col-md-6 col-sm-6 col-xs-12">
-                            <a href="kurumsal-mail-hizmeti.html#cloud-mail">
+                            <a href="kurumsal-mail-hosting-cozumleri.html#cloud-mail">
                               <img style="width:120px; height: 120px;" src="assets/img/cloud-mail.svg"><br><br>
                                 <h5>Bulut Mail</h5>
                                 <p>Küçük ve orta ölçekli ekiplerin performansı ile tüm ihtiyaçlarını karşılamak için tasarlandı.</p>
                             </a>
                         </div>
                         <div class="col col-md-6 col-sm-6 col-xs-12">
-                            <a href="kurumsal-mail-hizmeti.html#business">
+                            <a href="kurumsal-mail-hosting-cozumleri.html#business">
                               <img style="width:120px; height: 120px;" src="assets/img/mail-server.svg"><br><br>
                                 <h5>Kurumsal E-Mail Sunucu</h5>
                                 <p>Büyük ve orta ölçekli işletmeler için tasarlanmış Kurumsal E-Mail Sunucu ile herşey kontrolünüz altında.</p>
@@ -375,9 +375,9 @@ alınabilir.</p>
               </div>
               <div class="col col-md-3">
                   <h6>Çözümlerimiz</h6>
-                  <a href="toplu-mail-gonderim-ozellikleri.html">Toplu E-Mail Gönderimi</a>
-                  <a href="kurumsal-mail-hizmeti.html">Kurumsal E-Mail Hosting</a>
-                  <a href="kurumsal-mail-hizmeti.html">Kurumsal E-Mail Sunucu</a>
+                  <a href="toplu-mail-gonderim-servisi-ozellikleri.html">Toplu E-Mail Gönderimi</a>
+                  <a href="kurumsal-mail-hosting-cozumleri.html">Kurumsal E-Mail Hosting</a>
+                  <a href="kurumsal-mail-hosting-cozumleri.html">Kurumsal E-Mail Sunucu</a>
                   <a href="mail-dogrulama-hizmeti.html">Mail Doğrulama Hizmeti</a>
               </div>
               <div class="col col-md-3">
@@ -427,11 +427,11 @@ alınabilir.</p>
 
     <nav>
         <ul class="cd-primary-nav">
-            <li><a href="toplu-mail-gonderim-ozellikleri.html">Özellikler</a></li>
+            <li><a href="toplu-mail-gonderim-servisi-ozellikleri.html">Özellikler</a></li>
             <li><a href="toplu-mail-gonderim-fiyatlari.html">Fiyatlar</a></li>
             <li><a href="mail-dogrulama-hizmeti.html">Doğrulama</a></li>
             <li><a href="toplu-mail-gonderim-servisi.html">Servisler</a></li>
-            <li><a href="kurumsal-mail-hizmeti.html">Kurumsal E-Mail</a></li>
+            <li><a href="kurumsal-mail-hosting-cozumleri.html">Kurumsal E-Mail</a></li>
             <li><a href="iletisim.html">İletişim</a></li>
             <li><a href="giris.html">Giriş Yap</a></li>
             <li><a href="kayit.html">Hesap Aç</a></li>
@@ -469,12 +469,12 @@ alınabilir.</p>
     <link rel="stylesheet" type="text/css" href="assets/css/jquery.fancybox.min.css">
     <script src="assets/js/jquery.fancybox.min.js"></script>
 	<script>
-		
+
 		$(window).on('load',function(){
         	if($.session.get('visit') == undefined){ $('#exampleModal').modal('show');};
 			$.session.set('visit', 'visited');
 		});
-		
+
 	</script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-hover-dropdown/2.0.11/bootstrap-hover-dropdown.min.js"></script>
