--- a/kurumsal.html
+++ b/kurumsal.html
@@ -77,7 +77,7 @@
                         <ul>
                             <li>
                                 <div class="menu-title">
-                                    <a href="toplu-mail-gonderim-ozellikleri.html" data-hover="Özellikler">Özellikler</a>
+                                    <a href="toplu-mail-gonderim-servisi-ozellikleri.html" data-hover="Özellikler">Özellikler</a>
                                 </div>
                             </li>
                             <li>
@@ -97,7 +97,7 @@
                             </li>
                             <li>
                                 <div class="menu-title">
-                                    <a href="kurumsal-mail-hizmeti.html" data-hover="Kurumsal E-Mail">Kurumsal E-Mail</a>
+                                    <a href="kurumsal-mail-hosting-cozumleri.html" data-hover="Kurumsal E-Mail">Kurumsal E-Mail</a>
                                 </div>
                             </li>
                             <li>
@@ -309,9 +309,9 @@
               </div>
               <div class="col col-md-3">
                   <h6>Çözümlerimiz</h6>
-                  <a href="toplu-mail-gonderim-ozellikleri.html">Toplu E-Mail Gönderimi</a>
-                  <a href="kurumsal-mail-hizmeti.html">Kurumsal E-Mail Hosting</a>
-                  <a href="kurumsal-mail-hizmeti.html">Kurumsal E-Mail Sunucu</a>
+                  <a href="toplu-mail-gonderim-servisi-ozellikleri.html">Toplu E-Mail Gönderimi</a>
+                  <a href="kurumsal-mail-hosting-cozumleri.html">Kurumsal E-Mail Hosting</a>
+                  <a href="kurumsal-mail-hosting-cozumleri.html">Kurumsal E-Mail Sunucu</a>
                   <a href="mail-dogrulama-hizmeti.html">Mail Doğrulama Hizmeti</a>
               </div>
               <div class="col col-md-3">
@@ -361,11 +361,11 @@
 
     <nav>
         <ul class="cd-primary-nav">
-            <li><a href="toplu-mail-gonderim-ozellikleri.html">Özellikler</a></li>
+            <li><a href="toplu-mail-gonderim-servisi-ozellikleri.html">Özellikler</a></li>
             <li><a href="toplu-mail-gonderim-fiyatlari.html">Fiyatlar</a></li>
             <li><a href="mail-dogrulama-hizmeti.html">Doğrulama</a></li>
             <li><a href="toplu-mail-gonderim-servisi.html">Servisler</a></li>
-            <li><a href="kurumsal-mail-hizmeti.html">Kurumsal E-Mail</a></li>
+            <li><a href="kurumsal-mail-hosting-cozumleri.html">Kurumsal E-Mail</a></li>
             <li><a href="iletisim.html">İletişim</a></li>
             <li><a href="giris.html">Giriş Yap</a></li>
             <li><a href="kayit.html">Hesap Aç</a></li>
