--- a/sozlesme.html
+++ b/sozlesme.html
@@ -124,7 +124,7 @@ page[size="A5"][layout="landscape"] {
                         <ul>
                             <li>
                                 <div class="menu-title">
-                                    <a href="toplu-mail-gonderim-ozellikleri.html" data-hover="Özellikler">Özellikler</a>
+                                    <a href="toplu-mail-gonderim-servisi-ozellikleri.html" data-hover="Özellikler">Özellikler</a>
                                 </div>
                             </li>
                             <li>
@@ -144,7 +144,7 @@ page[size="A5"][layout="landscape"] {
                             </li>
                             <li>
                                 <div class="menu-title">
-                                    <a href="kurumsal-mail-hizmeti.html" data-hover="Kurumsal E-Mail">Kurumsal E-Mail</a>
+                                    <a href="kurumsal-mail-hosting-cozumleri.html" data-hover="Kurumsal E-Mail">Kurumsal E-Mail</a>
                                 </div>
                             </li>
                             <li>
@@ -545,9 +545,9 @@ page[size="A5"][layout="landscape"] {
               </div>
               <div class="col col-md-3">
                   <h6>Çözümlerimiz</h6>
-                  <a href="toplu-mail-gonderim-ozellikleri.html">Toplu E-Mail Gönderimi</a>
-                  <a href="kurumsal-mail-hizmeti.html">Kurumsal E-Mail Hosting</a>
-                  <a href="kurumsal-mail-hizmeti.html">Kurumsal E-Mail Sunucu</a>
+                  <a href="toplu-mail-gonderim-servisi-ozellikleri.html">Toplu E-Mail Gönderimi</a>
+                  <a href="kurumsal-mail-hosting-cozumleri.html">Kurumsal E-Mail Hosting</a>
+                  <a href="kurumsal-mail-hosting-cozumleri.html">Kurumsal E-Mail Sunucu</a>
                   <a href="mail-dogrulama-hizmeti.html">Mail Doğrulama Hizmeti</a>
               </div>
               <div class="col col-md-3">
@@ -597,11 +597,11 @@ page[size="A5"][layout="landscape"] {
 
     <nav>
         <ul class="cd-primary-nav">
-            <li><a href="toplu-mail-gonderim-ozellikleri.html">Özellikler</a></li>
+            <li><a href="toplu-mail-gonderim-servisi-ozellikleri.html">Özellikler</a></li>
             <li><a href="toplu-mail-gonderim-fiyatlari.html">Fiyatlar</a></li>
             <li><a href="mail-dogrulama-hizmeti.html">Doğrulama</a></li>
             <li><a href="toplu-mail-gonderim-servisi.html">Servisler</a></li>
-            <li><a href="kurumsal-mail-hizmeti.html">Kurumsal E-Mail</a></li>
+            <li><a href="kurumsal-mail-hosting-cozumleri.html">Kurumsal E-Mail</a></li>
             <li><a href="iletisim.html">İletişim</a></li>
             <li><a href="giris.html">Giriş Yap</a></li>
             <li><a href="kayit.html">Hesap Aç</a></li>
