--- a/toplu-mail-gonderim-fiyatlari.html
+++ b/toplu-mail-gonderim-fiyatlari.html
@@ -570,6 +570,23 @@
   </div>
 </div>
 
+<div class="modal fade" id="AcıklamaModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 style="text-align: center;" class="modal-title" id="exampleModalLabel"><strong>Açıklama</strong></h4>
+      </div>
+      <div class="modal-body">
+			Yanda yer alan adet giriniz kısmına adet girerek fiyatları görebilirsiniz.  
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
+
+      </div>
+    </div>
+  </div>
+</div>
+
 
                     <div class="yardimItem">
                         <h1>İade garantisi hangi ürün ve hizmetleri kapsar?</h1>
@@ -729,8 +746,11 @@
     <script src="assets/js/blob.js"></script>
 
     <script>
+	
+	$(".fiyat-aciklama").click(function(){$("#AcıklamaModal").modal({show:'true'})});
 
-	  $("#bosAciklama2").hide();
+
+	$("#bosAciklama2").hide();
 	$("#bosAciklama3").hide();
 	$("#fiyatBaslık2").hide();
 	$("#fiyatBaslık3").hide();
