--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@ alınabilir.</p>
         <div class="container">
             <div class="copy">
                 <div class="copyright">Copyright © 2018 GoMail. Tüm Hakları Saklıdır.</div>
+
                 <ul class="social-icons">
                     <li><a href="https://www.facebook.com/GoMailTR/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                     <li><a href="https://www.linkedin.com/company/gomail/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
@@ -412,7 +413,10 @@ alınabilir.</p>
                     <a href="iletisim.html">Bize Ulaşın</a>
                     <a href="sss.html">Sıkça Sorulan Sorular</a>
                 </div>
+			
             </div>
+			<div class="copyright1">Developed with <i style="color: #E90606; font-size: 12px; margin: 0 3px" class="fa fa-heart pulse"></i> by Pavos</div>
+			 
         </div>
         <!-- end copy -->
     </footer>
