--- a/odeme.html
+++ b/odeme.html
@@ -1238,18 +1238,14 @@
     <!-- capslock -->
     <script type="text/javascript" src="assets/js/capslock/jquery.capslockstate.js "></script>
 
+    <!-- validate -->
+    <script type="text/javascript" src="assets/js/validate/jquery.validate.js "></script>
     <script type="text/javascript" src="assets/js/validate/jquery.maskedinput-1.2.1.pack.js "></script>
 
     <!-- scroll -->
     <script type="text/javascript" src="assets/js/scroll/enscroll-0.4.2.min.js "></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js "></script>
-    <script src="assets/js/odeme-main.js"></script>
-
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/init.js"></script>
-    <script src="assets/js/velocity.min.js"></script>
-    <script src="assets/js/main.js"></script>
     <script src="assets/js/odeme-main.js"></script>
     <script src="assets/js/jquery.maskedinput.js"></script>
 
