toplam adet eklendi
toplam adet eklendi

--- a/mail-dogrulama-hizmeti.html
+++ b/mail-dogrulama-hizmeti.html
@@ -171,12 +171,12 @@
                             <canvas class="bubble b-blobs__b3" data-fill="#f8f8f8"></canvas>
                         </div>
                     </div>
-                    <!-- <div  class="sayac">
-                        <span class="counter counter-analog2" data-direction="up" data-format="145" data-stop="145" data-interval="10">{{ timerCount[0].Times }}</span>
+                    <div  class="sayac">
+                        <span class="counter counter-analog2" data-direction="up" data-format="145" data-stop="145" data-interval="10">{{ allCount[0].useTimes }}</span>
                         <div class="sayac-text">
-                            Günlük Sorgulanan Toplam Mail Sayısı
+                            Sorgulanan Toplam Mail Sayısı
                         </div>
-                    </div>-->
+                    </div>
 					
 
 					
